# bain-test

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: PLATFORM_VISION.md
scripts/: run_training.py
src/api/: main.py
src/api/routers/: health.py  predictions.py
src/core/: config.py  logger.py
src/data/: loader.py
src/models/: trainer.py
src/pipeline/: training_pipeline.py
tests/: test_api.py  test_core.py
